--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="css/bootstrap-utilities.css">
     <link rel="stylesheet" href="css/bootstrap-utilities.min.css">
     <link rel="stylesheet" href="css/bootstrap-utilities.rtl.min.css">
+    <lien  href =" https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css " rel =" feuille de style " >
+    
     <title>Beauty.com l'instant beauté </title>
 </head>
 <body>
@@ -27,6 +29,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light ">
     <!--Elle prend 100% de la page via la classe container-fluid-->
     <div class="container-fluid">
+
+
         <!--Un liens + le logo voyage.com-->
         <a class="navbar-brand" href="#">
             <img src="img/logoCS 2.png" alt="beauty.com" title="Beauty.com" width="20%">
@@ -69,6 +73,7 @@
         </div>
     </div>
 </nav> 
+
 <!--section 1-->
 
 <div id="section-1" class="container-fluid">
