correction Signed-off-by: s-bahloul <dalidi915@gmail.com>

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="#">Rouge à lèvres</a></li>
-                        <li><a class="dropdown-item" href="#">Vervis à ongle</a></li>
+                        <li><a class="dropdown-item" href="#">Vernis à ongles</a></li>
                         <li><a class="dropdown-item" href="#">crémes éclat</a></li>
                         <li><a class="dropdown-item" href="#">Eyeliner</a></li>
                         <li><hr class="dropdown-divider"></li>
