page 2 Signed-off-by: s-bahloul <dalidi915@gmail.com>

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                        Produits Tendance
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Rouge à lèvres</a></li>
+                        <li><a class="dropdown-item" href="page2.html">Rouge à lèvres</a></li>
                         <li><a class="dropdown-item" href="#">Vernis à ongles</a></li>
                         <li><a class="dropdown-item" href="#">crémes éclat</a></li>
                         <li><a class="dropdown-item" href="#">Eyeliner</a></li>
@@ -212,6 +212,7 @@
        </div>
     </div>        
 </div>
-
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
